-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 14.0.0
-
-
59ce9dc04 (14.0)
Initial CMake configuration is practically useless, nothing works. It's practically impossible to apply some set of the initial configuration options, options aren't remembered, it starts configuring immediately after you open a new kit (no chance to set up some initial options), ... now I spent ~1 hour trying to apply Initial configuration options and I was not successful.
The only way to set up a CMake project is to pray that the initial. config succeeds and then you can change the normal cmake config. options and re-configure.
I'm pretty sure that it worked in the previous qtc versions, may be not perfectly but I was able to apply initial config. options.
Now I tried qtc 13.0.1 on another VM and it works there, I didn't test it deeply.
- is duplicated by
-
QTCREATORBUG-31384 initial parameters are lost after pressing the "Re-configure with initial parameters" button
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-31320 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 576818,2 | CMakePM: Fix saving "Initial Configuration" values | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |