src/plugins/cmakeprojectmanager/cmakeprojectmanager.cpp
@@ -262,6 +262,7 @@ void CMakeManager::clearCMakeCache(BuildSystem *buildSystem)
     QTC_ASSERT(cmakeBuildSystem, return);
 
     cmakeBuildSystem->clearCMakeCache();
+    cmakeBuildSystem->disableCMakeBuildMenuActions();
 }
 
 void CMakeManager::runCMake(BuildSystem *buildSystem)
